--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/mariacalosan/CoderHouse-JavaScript#readme",
   "dependencies": {
     "node-sass": "^7.0.1",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "sweetalert2": "^11.4.17"
   }
 }
